--- a/public/index.htm
+++ b/public/index.htm
@@ -8,7 +8,7 @@
     <title>Inicio</title>
 </head>
 <body style="background-color: cadetblue;">
-    <h1 class="text-center mt-3">Página de Inicio</h1>
+    <h1 class="text-center mt-3">Página de Inicio del portal</h1>
     <div class="container mt-3">
         <a href="pagina1.htm" class="btn btn-success">Ir a Primera Pagina</a>
         <a href="pagina2.htm" class="btn btn-success">Ir a Segunda pagina</a>
